--- a/ESC_50_Complete_Project_All_Methods.ipynb
+++ b/ESC_50_Complete_Project_All_Methods.ipynb
@@ -226,6 +226,86 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feature Selection Visualization\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing mutual information for feature visualization...\n",
+      "Saved: data_out/top30_features_mi.png\n",
+      "\n",
+      "Top 10 features by MI:\n",
+      "   1. f1: 0.5749\n",
+      "   2. f164: 0.5644\n",
+      "   3. f163: 0.5256\n",
+      "   4. f162: 0.5078\n",
+      "   5. f0: 0.5061\n",
+      "   6. f43: 0.4900\n",
+      "   7. f41: 0.4852\n",
+      "   8. f166: 0.4836\n",
+      "   9. f165: 0.4825\n",
+      "  10. f44: 0.4655\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Visualize Top 30 Features by Mutual Information\n",
+    "import re\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.feature_selection import mutual_info_classif\n",
+    "\n",
+    "# Load raw features\n",
+    "df_raw = pd.read_csv(\"data_out/esc50_features_raw.csv\")\n",
+    "\n",
+    "# Extract feature columns\n",
+    "feature_cols = [c for c in df_raw.columns if re.fullmatch(r'f\\d+', c)]\n",
+    "feature_cols = sorted(feature_cols, key=lambda x: int(x[1:]))  # Sort by number\n",
+    "\n",
+    "X = df_raw[feature_cols].values.astype(np.float32)\n",
+    "y = df_raw['target'].values.astype(int)\n",
+    "\n",
+    "# Compute mutual information (or load if already computed)\n",
+    "print(\"Computing mutual information for feature visualization...\")\n",
+    "mi = mutual_info_classif(X, y, random_state=42)\n",
+    "mi_series = pd.Series(mi, index=feature_cols).sort_values(ascending=False)\n",
+    "\n",
+    "# Get top 30 features\n",
+    "top30 = mi_series.head(30)\n",
+    "\n",
+    "# Create visualization\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "plt.barh(range(len(top30)), top30.values, color='steelblue', alpha=0.7, edgecolor='black', linewidth=1)\n",
+    "plt.yticks(range(len(top30)), top30.index)\n",
+    "plt.gca().invert_yaxis()  # Highest value at top\n",
+    "plt.xlabel('Mutual Information Score', fontsize=12, fontweight='bold')\n",
+    "plt.ylabel('Feature', fontsize=12, fontweight='bold')\n",
+    "plt.title('Top 30 Features Ranked by Mutual Information', fontsize=14, fontweight='bold')\n",
+    "plt.grid(True, alpha=0.3, axis='x')\n",
+    "\n",
+    "# Add value labels on bars\n",
+    "for i, (feat, val) in enumerate(top30.items()):\n",
+    "    plt.text(val, i, f' {val:.4f}', va='center', fontsize=9)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.savefig('data_out/top30_features_mi.png', dpi=200, bbox_inches='tight')\n",
+    "plt.close()\n",
+    "print(f\"Saved: data_out/top30_features_mi.png\")\n",
+    "print(f\"\\nTop 10 features by MI:\")\n",
+    "for i, (feat, val) in enumerate(top30.head(10).items(), 1):\n",
+    "    print(f\"  {i:2d}. {feat}: {val:.4f}\")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
